// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`set submit button label to 'Save' when saving is false 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <h2>
    Edit
     
    Author
  </h2>
  <div
    className="form-group"
  >
    <label
      htmlFor="name"
    >
      Name
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="name"
        onChange={[MockFunction]}
        placeholder=""
        type="text"
        value="Cory House"
      />
      
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    type="submit"
  >
    Save
  </button>
  <button
    className="btn btn-secondary cancel-button"
    onClick={[Function]}
    type="button"
  >
    Cancel
  </button>
</form>
`;

exports[`set submit button label to 'Saving...' when saving is true 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <h2>
    Edit
     
    Author
  </h2>
  <div
    className="form-group"
  >
    <label
      htmlFor="name"
    >
      Name
    </label>
    <div
      className="field"
    >
      <input
        className="form-control"
        name="name"
        onChange={[MockFunction]}
        placeholder=""
        type="text"
        value="Cory House"
      />
      
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={true}
    type="submit"
  >
    Saving...
  </button>
  <button
    className="btn btn-secondary cancel-button"
    onClick={[Function]}
    type="button"
  >
    Cancel
  </button>
</form>
`;
